kubernetes/apps/platform/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
---
apiVersion: v1
kind: Namespace
metadata:
  name: secrets
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: v1
kind: Namespace
metadata:
  name: kargo
---
apiVersion: v1
kind: Namespace
metadata:
  name: quality
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-ui
