kubernetes/apps/platform/internal-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-platform-internal-gateway
  namespace: envoy-gateway-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: core-platform
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  ports:
    - name: https
      port: 443
      targetPort: 10443
    - name: http
      port: 80
      targetPort: 10080
