kubernetes/apps/platform/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: core-platform
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - argocd.panixida.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: core-platform
      namespace: envoy-gateway-system
      sectionName: argocd-https
  hostnames:
    - argocd.panixida.ru
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo-http-redirect
  namespace: kargo
spec:
  parentRefs:
    - name: core-platform
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - kargo.panixida.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo
  namespace: kargo
spec:
  parentRefs:
    - name: core-platform
      namespace: envoy-gateway-system
      sectionName: kargo-https
  hostnames:
    - kargo.panixida.ru
  rules:
    - backendRefs:
        - name: kargo-api
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-http-redirect
  namespace: headlamp
spec:
  parentRefs:
    - name: core-platform
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - k8s.panixida.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  parentRefs:
    - name: core-platform
      namespace: envoy-gateway-system
      sectionName: k8s-https
  hostnames:
    - k8s.panixida.ru
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
